test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-seccomp/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-seccomp
spec:
  background: true
  validationFailureAction: Enforce
  rules:
  - name: test-exclusion-seccomp
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: baseline
        version: latest
        exclude:
        - controlName: "Seccomp"
          restrictedField: "spec.securityContext.seccompProfile.type"
          values:
          - "Unconfined"
        - controlName: "Seccomp"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.seccompProfile.type"
          values:
          - "Unconfined"
        - controlName: "Seccomp"
          images:
          - nginx
          restrictedField: "spec.initContainers[*].securityContext.seccompProfile.type"
          values:
          - "Unconfined"
